<resources>
    <string name="app_name">Rishtey Township</string>
    <string name="customer_name">Customer Name</string>
    <string name="customer">Customer</string>
    <string name="agent">Agent</string>
    <string name="admin">Admin</string>
    <string name="enter_cust_name">Enter Customer Name</string>
    <string name="customers_mobile">Customer Mobile</string>
    <string name="enter_cust_mobile">Enter Customer Mobile</string>
    <string name="customer_profession">Customer Profession</string>
    <string name="sel_cust_profession">Select Customer Profession</string>
    <string name="customer_occupation">Customer Occupation</string>
    <string name="select_cust_occupation">Select Customer Occupation</string>
    <string name="customer_address">Customer Address</string>
    <string name="enter_cust_address">Enter Customer Address</string>
    <string name="add_customer">Add Customer</string>
    <string name="vehicle_type">Vehicle Type</string>
    <string name="select_car">Select Car Model</string>
    <string name="sel_vehicle_type">Select Vehicle Type</string>
    <string name="sel_car">Select Car</string>
    <string name="comment">Comment</string>
    <string name="car_number">Car Number</string>
    <string name="enter_comment">Enter Comment</string>
    <string name="customer_num">Enter Total Customer</string>
    <string name="collected_token">Collected Token Amount</string>
    <string name="enter_amount">Enter Amount</string>
    <string name="visit_date">Visit Date</string>
    <string name="enter_car_number">Enter Car Number</string>
    <string name="select_visit_date">Select Date for Visit</string>
    <string name="starting_point">Starting Point(Source)</string>
    <string name="select_agent_location">Select Agent Location</string>
    <string name="add_visits">Add Visits</string>
    <string name="agent_login">Rishtey Login</string>
    <string name="mobile">Mobile</string>
    <string name="password">Password</string>
    <string name="remember_me">Remember me</string>
    <string name="logins">Login</string>
    <string name="rishtey">Rishtey Township Pvt. Ltd.</string>
    <string name="rishtey_agent_login">Rishtey Agent\nLogin</string>
    <string name="rishtey_client_login">Rishtey Client\nLogin</string>
    <string name="rishtey_admin_login">Admin\nLogin</string>
    <string name="request_new_trip">Request New Trip</string>
    <string name="search_txt">Search for area, street name, city.........</string>
    <string name="agent_search">search for agents or customers</string>
    <string name="noofcustomers">Plot Buyer(Customer)</string>
    <string name="totalCustomer">Total Customer</string>
    <string name="self_count">Self Count</string>
    <string name="team_count">Team Count</string>
    <string name="noofagents">No of Agents</string>
    <string name="today_business">Today\'s Business</string>
    <string name="total_business">Total Business</string>
    <string name="credit">Credit</string>
    <string name="debit">Debit</string>
    <string name="balance">Balance</string>
    <string name="home">Home</string>
    <string name="tr_vid">Training Video</string>
    <string name="visit_training">Visit Training</string>
    <string name="change_language">Change Language to Hindi</string>
    <string name="bank_detail">Bank Detail</string>
    <string name="withdraw_voucher">Withdraw Voucher</string>
    <string name="my_downline">My Downline (Agent)</string>
    <string name="active_downline">Active Downline</string>
    <string name="full_settlement">Latest Offer</string>
    <string name="full_settlements">Old is Gold</string>
    <string name="gallery">Gallery</string>
    <string name="bank_acc">Company Account</string>
    <string name="my_downloads">My Downloads</string>
    <string name="offer_notice">Offer &amp; Notices</string>
    <string name="welcome">WELCOME</string>
    <string name="add_new_entity">Add new entity</string>
    <string name="add_new_agent">Add New Agent</string>
    <string name="add_new_cust">Add New Customer</string>
    <string name="pay_for_cust">Pay For Customer</string>
    <string name="plot_request">Plot Request Form</string>
    <string name="customer_pass">Customer Passbook</string>
    <string name="customer_pay_status">Customer Payment Status</string>
    <string name="request_app">Request &amp; Approval</string>
    <string name="expense_report">Expense Request</string>
    <string name="registry_request">Registry Request</string>
    <string name="registry_app">Registry Approval</string>
    <string name="plot_avail_request">Plot Availability Requests</string>
    <string name="reports">Reports</string>
    <string name="daily_client">Daily Client Report</string>
    <string name="daily_agent">Daily Agent Report</string>
    <string name="plot_sales">Plot Sales</string>
    <string name="cheque_rec">Cheque Receiving</string>
    <string name="collection">Collection</string>
    <string name="voucher">Voucher</string>
    <string name="team_voucher">Team Voucher</string>
    <string name="about_help">About &amp; Help</string>
    <string name="about_us">About Us</string>
    <string name="complaint">Complaint &amp; Feedback</string>
    <string name="contact_us">Contact Us</string>
    <string name="change_pwd">Change Password</string>
    <string name="terms">Terms &amp; Conditions</string>
    <string name="refund_policy">Refund &amp; Cancellation Policy</string>
    <string name="priv_pol">Privacy Policy</string>
    <string name="plot">Plot : </string>
    <string name="plot_area">Plot Area : </string>
    <string name="rates">Rate : </string>
    <string name="duration">Duration : </string>
    <string name="total_amount">Total Amount : </string>
    <string name="total_paid">Total Paid : </string>
    <string name="customer_mobile">Customer Mobile No : </string>
    <string name="last_paid">Last Paid : </string>
    <string name="lp_date">Last Paid Date : </string>
    <string name="pending_amount">Pending Amount : </string>
    <string name="please_wait">Please Wait...</string>
    <string name="total_sale_area">Total Sale Area : </string>
    <string name="rank">Rank : </string>
    <string name="plot_amount">Plot Amount : </string>
    <string name="sale">Sale : </string>
    <string name="last_m_business">Last Month Business : </string>
    <string name="mobiles">Mobile No : </string>
    <string name="introducor">Introducer: </string>
    <string name="two_way">Two Way Travel</string>
    <string name="expense_cost">Two way fare will be provided</string>
    <string name="source">Source</string>
    <string name="destination">Destination</string>
    <string name="approved">Approved</string>
    <string name="view_visit">View Visit</string>
    <string name="trip_on_ff">Trip On/Off</string>
    <string name="my_visits">My Visits</string>
    <string name="plot_availability">Plot Availability</string>
    <string name="my_passbook">My Passbook</string>
    <string name="p_books">Plot Requests</string>
    <string name="view_map">View Map</string>
    <string name="agent_dashboard">AGENT DASHBOARD</string>
    <string name="transaction_amount">Transaction Amount : </string>
    <string name="transaction_date">Transaction Date : </string>
    <string name="transaction_mode">Transaction Mode : </string>
    <string name="no_trans">No Transaction Found</string>
    <string name="select_rc">Select RC Document</string>
    <string name="select_loan_1">Select Loan Document 1</string>
    <string name="select_loan_2">Select Loan Document 2</string>
    <string name="add_car">Add Car</string>
    <string name="pay_emi">Pay EMI</string>
    <string name="add_new_car">Add New Car</string>
    <string name="title_activity_maps">MapsActivity</string>
    <string name="plot_req">Plot Request Form</string>
    <string name="news">News</string>
    <string name="mobile_no">Mobile No - </string>
    <string name="join_date">Joining Date</string>
    <string name="my_id">My Id</string>
    <string name="my_rank">My Rank</string>
    <string name="totals">Total</string>
    <string name="paids">Paid</string>
    <string name="balances">Balance</string>
    <string name="total_plot_sales">TOTAL PLOT SALES</string>
    <string name="total_visits_comp">TOTAL VISITS COMPLETED</string>
    <string name="total_commission_ear">TOTAL COMMISSION EARNED</string>
    <string name="other_info">Other Information</string>
    <string name="introducer_name">Introducer Name</string>
    <string name="introducer_mob">Introducer Mobile</string>
    <string name="introducer_rank">Introducer Rank</string>
    <string name="my_emails">My Email</string>
    <string name="acc_no">Account Number</string>
    <string name="bank_name">Bank Name</string>
    <string name="acc_holder">Account Holder\'s Name</string>
    <string name="bank_branch">Bank Branch</string>
    <string name="bank_ifsc">Bank IFSC</string>
    <string name="update_details">Update Details</string>
    <string name="select_bank">SELECT BANK</string>
    <string name="plot_buy_req">Request To Buy Plot</string>
    <string name="payment">Payment Receipt</string>
    <string name="plots">My Plots</string>
    <string name="customer_dashboard">CUSTOMER DASHBOARD</string>
    <string name="book_plot">Book Plot</string>
    <string name="pays">Payment Details</string>
    <string name="submitted">Submitted Payment</string>
    <string name="balance_pay">Balance Payment</string>
    <string name="plot_details">Plot Details</string>
    <string name="booked_plots">Total Plots</string>
    <string name="total_area">Total Area</string>
    <string name="plot_payments">Plot Payments</string>
    <string name="sub">Submitted</string>
    <string name="pending">Pending</string>
    <string name="remain">Remaining</string>
    <string name="pay_for_plot">Pay Amount</string>
    <string name="view">View</string>
    <string name="buy_plots">Buy</string>
    <string name="your_remark">Your Remark</string>
    <string name="emp_remark">Team Remark</string>
    <string name="request_detail">Request Detail</string>
    <string name="no_request">No Plot Request Found</string>
    <string name="agen_nm">Agent Name</string>
    <string name="cust_name">Customer Name</string>
    <string name="property_type">Property Type</string>
    <string name="requested_property">Requested Property</string>
    <string name="requested_block">Requested Block</string>
    <string name="requested_plot">Requested Plot</string>
    <string name="status_req">Status Of Request</string>
    <string name="alloted_pr">Allotted Property</string>
    <string name="alloted_block">Allotted Block</string>
    <string name="alloted_plot">Allotted Plot</string>
    <string name="allotted_amount">Allotted Plot Amount</string>
    <string name="requested_detail">Requested Details</string>
    <string name="alloted_details">Allotment Details</string>
    <string name="click_here">Click Here For Blocks</string>
    <string name="no_installment">No Installment Found For You</string>
    <string name="payment_installment">Pay Amount</string>
    <string name="otp_name">OTP has been sent to Agent\'s Mobile Number whose check you have used for payment. Please ask OTP from agent whose check you have used.</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="default_notification_channel_id" translatable="false">rishnotiii</string>
    <string name="msg_token_fmt" translatable="false">FCM registration Token: %s</string>
</resources>