<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".visits.AddTripActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="?android:actionBarSize"
        android:background="@color/purple_700"
        android:gravity="center_vertical"
        android:paddingLeft="12dp"
        android:paddingRight="12dp">

        <ImageView
            android:id="@+id/back_button"
            android:layout_width="30dp"
            android:layout_height="match_parent"
            android:src="@drawable/left_arrow" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="8"
            android:fontFamily="@font/furter"
            android:gravity="center"
            android:paddingLeft="12dp"
            android:text="ADD NEW TRIP"
            android:textColor="#ffffff"
            android:textSize="15sp" />

        <ImageView
            android:layout_width="30dp"
            android:layout_height="25dp"
            android:src="@drawable/logouts"
            android:visibility="invisible" />
    </LinearLayout>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="#ffffff"
            android:orientation="vertical"
            android:padding="12dp">

            <LinearLayout
                android:id="@+id/vehicle_type_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/hav_med"
                    android:text="@string/vehicle_type"
                    android:textSize="14sp" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:background="@drawable/borders_new"
                    android:padding="2dp">

                    <EditText
                        android:id="@+id/vehicle_edit"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginLeft="12dp"
                        android:layout_weight="9"
                        android:background="#ffffff"
                        android:focusable="false"
                        android:fontFamily="@font/hav_med"
                        android:hint="@string/sel_vehicle_type"
                        android:inputType="text"
                        android:maxLines="1"
                        android:padding="2dp"
                        android:textSize="14sp" />

                    <View
                        android:layout_width="1dp"
                        android:layout_height="match_parent" />

                    <ImageView
                        android:layout_width="22dp"
                        android:layout_height="22dp"
                        android:layout_margin="10dp"
                        android:src="@drawable/ic_chevron"
                        app:tint="#000000" />

                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                android:id="@+id/car_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/hav_med"
                    android:text="@string/sel_car"
                    android:textSize="14sp" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:background="@drawable/borders_new"
                    android:padding="2dp">

                    <EditText
                        android:id="@+id/edit_car"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginLeft="12dp"
                        android:layout_weight="9"
                        android:background="#ffffff"
                        android:focusable="false"
                        android:fontFamily="@font/hav_med"
                        android:hint="@string/sel_car"
                        android:inputType="text"
                        android:maxLines="1"
                        android:padding="2dp"
                        android:textSize="14sp" />

                    <View
                        android:layout_width="1dp"
                        android:layout_height="match_parent" />

                    <ImageView
                        android:layout_width="22dp"
                        android:layout_height="22dp"
                        android:layout_margin="10dp"
                        android:src="@drawable/ic_chevron"
                        app:tint="#000000" />

                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                android:id="@+id/comment_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/comment_txt"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/hav_med"
                    android:text="@string/comment"
                    android:textSize="14sp" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:background="@drawable/borders_new"
                    android:padding="2dp">

                    <EditText
                        android:id="@+id/edit_comment"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginLeft="12dp"
                        android:layout_weight="9"
                        android:background="#ffffff"
                        android:fontFamily="@font/hav_med"
                        android:hint="@string/enter_comment"
                        android:inputType="text"
                        android:maxLines="1"
                        android:padding="2dp"
                        android:textSize="14sp" />

                    <View
                        android:layout_width="1dp"
                        android:layout_height="match_parent"
                        android:visibility="invisible" />

                    <ImageView
                        android:layout_width="22dp"
                        android:layout_height="22dp"
                        android:layout_margin="10dp"
                        android:src="@drawable/ic_chevron"
                        android:visibility="invisible"
                        app:tint="#000000" />

                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                android:id="@+id/customers"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/hav_med"
                    android:text="@string/totalCustomer"
                    android:textSize="14sp" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:background="@drawable/borders_new"
                    android:padding="2dp">

                    <EditText
                        android:id="@+id/total_customers"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginLeft="12dp"
                        android:layout_weight="9"
                        android:background="#ffffff"
                        android:digits="0123456789"
                        android:fontFamily="@font/hav_med"
                        android:hint="@string/customer_num"
                        android:inputType="number"
                        android:maxLines="1"
                        android:padding="2dp"
                        android:textSize="14sp" />

                    <View
                        android:layout_width="1dp"
                        android:layout_height="match_parent"
                        android:visibility="invisible" />

                    <ImageView
                        android:layout_width="22dp"
                        android:layout_height="22dp"
                        android:layout_margin="10dp"
                        android:src="@drawable/ic_chevron"
                        android:visibility="invisible"
                        app:tint="#000000" />

                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                android:id="@+id/cash_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:orientation="vertical"
                android:visibility="gone">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/hav_med"
                    android:text="@string/collected_token"
                    android:textSize="14sp" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:background="@drawable/borders_new"
                    android:padding="2dp">

                    <EditText
                        android:id="@+id/token_amount"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginLeft="12dp"
                        android:layout_weight="9"
                        android:background="#ffffff"
                        android:fontFamily="@font/hav_med"
                        android:hint="@string/enter_amount"
                        android:inputType="number"
                        android:maxLines="1"
                        android:padding="2dp"
                        android:textSize="14sp" />

                    <View
                        android:layout_width="1dp"
                        android:layout_height="match_parent"
                        android:visibility="invisible" />

                    <ImageView
                        android:layout_width="22dp"
                        android:layout_height="22dp"
                        android:layout_margin="10dp"
                        android:src="@drawable/ic_chevron"
                        android:visibility="invisible"
                        app:tint="#000000" />

                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                android:id="@+id/visit_date_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/hav_med"
                    android:text="@string/visit_date"
                    android:textSize="14sp" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:background="@drawable/borders_new"
                    android:padding="2dp">

                    <EditText
                        android:id="@+id/date_edit"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginLeft="12dp"
                        android:layout_weight="9"
                        android:background="#ffffff"
                        android:focusable="false"
                        android:fontFamily="@font/hav_med"
                        android:hint="@string/select_visit_date"
                        android:inputType="text"
                        android:maxLines="1"
                        android:padding="2dp"
                        android:textSize="14sp" />

                    <View
                        android:layout_width="1dp"
                        android:layout_height="match_parent" />

                    <ImageView
                        android:layout_width="22dp"
                        android:layout_height="22dp"
                        android:layout_margin="10dp"
                        android:src="@drawable/ic_chevron"
                        app:tint="#000000" />

                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                android:id="@+id/location_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/hav_med"
                    android:text="@string/starting_point"
                    android:textSize="14sp" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:background="@drawable/borders_new"
                    android:padding="2dp">

                    <EditText
                        android:id="@+id/agent_location"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginLeft="12dp"
                        android:layout_weight="9"
                        android:background="#ffffff"
                        android:ellipsize="end"
                        android:focusable="false"
                        android:fontFamily="@font/hav_med"
                        android:hint="@string/select_agent_location"
                        android:inputType="text"
                        android:maxLines="1"
                        android:padding="2dp"
                        android:textSize="14sp" />

                    <View
                        android:layout_width="1dp"
                        android:layout_height="match_parent" />

                    <ImageView
                        android:layout_width="22dp"
                        android:layout_height="22dp"
                        android:layout_margin="10dp"
                        android:src="@drawable/ic_chevron"
                        app:tint="#000000" />
                </LinearLayout>
            </LinearLayout>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/customer_recyclerview"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:visibility="visible"></androidx.recyclerview.widget.RecyclerView>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:gravity="center"
                android:visibility="visible">

                <TextView
                    android:id="@+id/total_customer"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="9"
                    android:fontFamily="@font/hav_med"
                    android:text="4 Customers"
                    android:textColor="@color/purple_700" />

                <TextView
                    android:id="@+id/add_customer"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/round_button"
                    android:paddingLeft="25dp"
                    android:paddingTop="12dp"
                    android:paddingRight="25dp"
                    android:paddingBottom="12dp"
                    android:text="Select Customers"
                    android:textColor="#ffffff"
                    android:textSize="12sp" />
            </LinearLayout>

            <TextView
                android:id="@+id/add_visit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:background="@drawable/round_button"
                android:fontFamily="@font/hav_med"
                android:gravity="center"
                android:paddingTop="12dp"
                android:paddingBottom="12dp"
                android:text="@string/add_visits"
                android:textColor="#ffffff" />

        </LinearLayout>
    </androidx.core.widget.NestedScrollView>
</LinearLayout>